<resources>
    <string name="app_name">USAEPAY Sandbox</string>
    <string name="type_of_transaction">Type of transaction:</string>
    <string name="payment_library_cc_name">Card Holder</string>
    <string name="payment_library_cc_number">Card Number</string>
    <string name="payment_library_cc_expiration">Expiration Date</string>
    <string name="payment_library_cc_cvv">CVV Number</string>
    <string name="payment_library_cc_avs_street">Street Verification</string>
    <string name="payment_library_cc_avs_zip">ZIP Verification</string>
    <string name="payment_library_pay">Pay</string>
    <string name="payment_library_hint_cc_name">Full Name</string>
    <string name="payment_library_hint_cc_number">Card Number</string>
    <string name="payment_library_hint_cc_expiration">MMYY</string>
    <string name="payment_library_hint_cc_cvv">CVV</string>
    <string name="payment_library_hint_cc_avs_street">Street (Optional)</string>
    <string name="payment_library_hint_cc_avs_zip">ZIP Code (Optional)</string>
    <string name="payment_library_invalid_card_name">Please enter a name!</string>
    <string name="payment_library_invalid_card_number">Card number is invalid!</string>
    <string name="payment_library_invalid_card_expiration">Card expiration is invalid!</string>
    <string name="payment_library_invalid_card_cvv">CVV is invalid!</string>
    <string name="payment_library_total">Total</string>
    <string name="payment_library_available_cards">We accept</string>
    <string name="payment_library_transaction_processing">Transaction processing…</string>
    <string name="payment_library_cash_tendered">Cash Tendered</string>
    <string name="payment_library_cash_change">Change</string>
    <string name="payment_library_zero_amount">$0.00</string>
    <string name="payment_library_zero_decimal">0.00</string>
    <string name="payment_library_invalid_cash_amount">Cash tendered is less than charge amount!</string>
    <string name="payment_library_check_number">Check Number</string>
    <string name="payment_library_check_license_state">Driver\'s Licence State</string>
    <string name="payment_library_check_license_number">Driver\'s License Number</string>
    <string name="payment_library_hint_check_number">Check Number</string>
    <string name="payment_library_hint_check_license_state">XX (Optional)</string>
    <string name="payment_library_hint_check_license_number">Optional</string>
    <string name="payment_library_invalid_check_number">Please enter the check number!</string>
    <string name="payment_library_ach_name">Account Holder</string>
    <string name="payment_library_ach_routing">Routing</string>
    <string name="payment_library_ach_account">Account</string>
    <string name="payment_library_hint_ach_name">Full Name</string>
    <string name="payment_library_hint_ach_routing">Routing #</string>
    <string name="payment_library_hint_ach_account">Account #</string>
    <string name="payment_library_invalid_ach_name">Please enter a name!</string>
    <string name="payment_library_invalid_ach_routing">Routing number is invalid!</string>
    <string name="payment_library_invalid_ach_account">Please enter an account number!</string>
    <string name="payment_library_clear">Clear</string>
    <string name="payment_library_accept">Accept</string>
    <string name="payment_library_cancel">Cancel</string>
    <string name="payment_library_send">Send</string>
    <string name="payment_library_email_address">Email Address</string>
    <string name="payment_library_hint_email_address">customer@example.com</string>
    <string name="payment_library_receipt">Receipt</string>
    <string name="payment_library_invalid_email_address">Email address is not valid!</string>
    <string name="payment_library_receipt_sent">Receipt has been sent!</string>
</resources>
