<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/payment_library_fragment_background"
    android:orientation="vertical" >

    <TextView
        style="@style/PaymentLibraryHeader"
        android:layout_width="match_parent"
        android:background="@color/payment_library_white"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/payment_library_receipt" />

    <TextView
        style="@style/PaymentLibraryText"
        android:layout_marginLeft="@dimen/payment_library_activity_vertical_margin"
        android:layout_marginRight="@dimen/payment_library_activity_horizontal_margin"
        android:layout_marginTop="@dimen/payment_library_activity_vertical_margin"
        android:text="@string/payment_library_email_address" />

    <EditText
        android:id="@+id/payment_library_email_address"
        style="@style/PaymentLibraryEditText"
        android:layout_marginLeft="@dimen/payment_library_activity_vertical_margin"
        android:layout_marginRight="@dimen/payment_library_activity_horizontal_margin"
        android:inputType="textEmailAddress"
        android:hint="@string/payment_library_hint_email_address" />

    <LinearLayout
        android:id="@+id/payment_library_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/payment_library_activity_vertical_margin"
        android:layout_marginLeft="@dimen/payment_library_activity_vertical_margin"
        android:layout_marginRight="@dimen/payment_library_activity_horizontal_margin"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/payment_library_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:minHeight="48dp"
            android:minWidth="128dp"
            android:text="@string/payment_library_cancel"
            android:textColor="@color/payment_library_white" />

        <Button
            android:id="@+id/payment_library_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="128dp"
            android:text="@string/payment_library_send"
            android:textColor="@color/payment_library_white" />
    </LinearLayout>

</LinearLayout>
