<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/payment_library_white" >

    <com.example.sungwon.usaepaysandbox.DrawableImageView
        android:id="@+id/payment_library_signature"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/payment_library_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/PaymentLibraryHeader"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:text="@string/payment_library_total" />

        <TextView
            android:id="@+id/payment_library_total"
            style="@style/PaymentLibraryHeader"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/payment_library_total" />

        <Button
            android:id="@+id/payment_library_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:minHeight="48dp"
            android:minWidth="128dp"
            android:text="@string/payment_library_clear"
            android:textColor="@color/payment_library_white" />

        <Button
            android:id="@+id/payment_library_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp"
            android:minWidth="128dp"
            android:text="@string/payment_library_accept"
            android:textColor="@color/payment_library_white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/payment_library_buttons"
        android:layout_marginLeft="16dp"
        android:text="X"
        android:textColor="@color/payment_library_black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@id/payment_library_buttons"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/payment_library_black" />

</RelativeLayout>
